--- a/style.scss
+++ b/style.scss
@@ -26,7 +26,7 @@ a {
   display: grid;
   grid: 1fr / #{$main-size} auto #{$main-size};
   align-items: center;
-  border: 1px solid $secondary;
+  border: solid $secondary;
   border-width: 1px 0;
   text-decoration: none;
   background: $fog;
